cmake_minimum_required(VERSION 3.0)
project(acll C)

set(CMAKE_C_STANDARD 99)

include_directories(libs/casserts)

if (NOT TARGET acll)
    add_library(acll acll.c acll.h)
    add_executable(acll_testcases testcases.c)
    target_link_libraries(acll_testcases acll)

    enable_testing()

    add_test(NAME test_acll_append_0 COMMAND acll_testcases test_acll_append_0)
    add_test(NAME test_acll_append_1 COMMAND acll_testcases test_acll_append_1)
    add_test(NAME test_acll_append_2 COMMAND acll_testcases test_acll_append_2)
    add_test(NAME test_acll_concat_0 COMMAND acll_testcases test_acll_concat_0)
    add_test(NAME test_acll_concat_1 COMMAND acll_testcases test_acll_concat_1)
    add_test(NAME test_acll_concat_2 COMMAND acll_testcases test_acll_concat_2)
    add_test(NAME test_acll_concat_3 COMMAND acll_testcases test_acll_concat_3)
    add_test(NAME test_acll_first_0 COMMAND acll_testcases test_acll_first_0)
    add_test(NAME test_acll_first_1 COMMAND acll_testcases test_acll_first_1)
    add_test(NAME test_acll_first_2 COMMAND acll_testcases test_acll_first_2)
    add_test(NAME test_acll_last_0 COMMAND acll_testcases test_acll_last_0)
    add_test(NAME test_acll_last_1 COMMAND acll_testcases test_acll_last_1)
    add_test(NAME test_acll_last_2 COMMAND acll_testcases test_acll_last_2)
    add_test(NAME test_acll_pop_0 COMMAND acll_testcases test_acll_pop_0)
    add_test(NAME test_acll_pop_1 COMMAND acll_testcases test_acll_pop_1)
    add_test(NAME test_acll_push_0 COMMAND acll_testcases test_acll_push_0)
    add_test(NAME test_acll_push_1 COMMAND acll_testcases test_acll_push_1)
    add_test(NAME test_acll_push_2 COMMAND acll_testcases test_acll_push_2)
    add_test(NAME test_acll_count_0 COMMAND acll_testcases test_acll_count_0)
    add_test(NAME test_acll_count_1 COMMAND acll_testcases test_acll_count_1)
    add_test(NAME test_acll_remove_0 COMMAND acll_testcases test_acll_remove_0)
    add_test(NAME test_acll_remove_1 COMMAND acll_testcases test_acll_remove_1)
    add_test(NAME test_acll_remove_2 COMMAND acll_testcases test_acll_remove_2)
    add_test(NAME test_acll_remove_3 COMMAND acll_testcases test_acll_remove_3)
    add_test(NAME test_acll_remove_4 COMMAND acll_testcases test_acll_remove_4)
    add_test(NAME test_acll_delete_0 COMMAND acll_testcases test_acll_delete_0)
    add_test(NAME test_acll_delete_1 COMMAND acll_testcases test_acll_delete_1)
    add_test(NAME test_acll_delete_2 COMMAND acll_testcases test_acll_delete_2)
    add_test(NAME test_acll_delete_3 COMMAND acll_testcases test_acll_delete_3)
    add_test(NAME test_acll_delete_4 COMMAND acll_testcases test_acll_delete_4)
    add_test(NAME test_acll_clone_0 COMMAND acll_testcases test_acll_clone_0)
    add_test(NAME test_acll_clone_1 COMMAND acll_testcases test_acll_clone_1)
    add_test(NAME test_acll_clone_2 COMMAND acll_testcases test_acll_clone_2)
    add_test(NAME test_acll_in_0 COMMAND acll_testcases test_acll_in_0)
    add_test(NAME test_acll_in_1 COMMAND acll_testcases test_acll_in_1)
    add_test(NAME test_acll_in_2 COMMAND acll_testcases test_acll_in_2)
    add_test(NAME test_acll_in_3 COMMAND acll_testcases test_acll_in_3)
    add_test(NAME test_acll_in_4 COMMAND acll_testcases test_acll_in_4)
    add_test(NAME test_acll_in_5 COMMAND acll_testcases test_acll_in_5)
    add_test(NAME test_acll_sort_0 COMMAND acll_testcases test_acll_sort_0)
    add_test(NAME test_acll_find_0 COMMAND acll_testcases test_acll_find_0)
    add_test(NAME test_acll_find_1 COMMAND acll_testcases test_acll_find_1)
    add_test(NAME test_acll_find_2 COMMAND acll_testcases test_acll_find_2)
    add_test(NAME test_acll_find_3 COMMAND acll_testcases test_acll_find_3)
    add_test(NAME test_acll_nextFilter_0 COMMAND acll_testcases test_acll_nextFilter_0)
    add_test(NAME test_acll_nextFilter_1 COMMAND acll_testcases test_acll_nextFilter_1)
    add_test(NAME test_acll_nextFilter_2 COMMAND acll_testcases test_acll_nextFilter_2)
    add_test(NAME test_acll_prevFilter_0 COMMAND acll_testcases test_acll_prevFilter_0)
    add_test(NAME test_acll_prevFilter_1 COMMAND acll_testcases test_acll_prevFilter_1)
    add_test(NAME test_acll_prevFilter_2 COMMAND acll_testcases test_acll_prevFilter_2)
    add_test(NAME test_acll_firstFilter_0 COMMAND acll_testcases test_acll_firstFilter_0)
    add_test(NAME test_acll_firstFilter_1 COMMAND acll_testcases test_acll_firstFilter_1)
    add_test(NAME test_acll_firstFilter_2 COMMAND acll_testcases test_acll_firstFilter_2)
    add_test(NAME test_acll_lastFilter_0 COMMAND acll_testcases test_acll_lastFilter_0)
    add_test(NAME test_acll_lastFilter_1 COMMAND acll_testcases test_acll_lastFilter_1)
    add_test(NAME test_acll_lastFilter_2 COMMAND acll_testcases test_acll_lastFilter_2)
endif ()
